--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "cross-env NODE_ENV=development nodemon --inspect=0.0.0.0:9222 index.js",
     "build": "npx tsc",
     "commit": "npx git-cz",
-    "test": "cross-env NODE_ENV=test INPUT_ROUTES_FILE_NAME=input-routes-test.csv jest --runInBand"
+    "test": "cross-env NODE_ENV=test INPUT_ROUTES_FILE_NAME=input-routes-test.csv jest --runInBand",
+    "best-route": "node ./src/modules/airport/airport-cli.js"
   },
   "author": "Gio Cruz",
   "license": "ISC",
