--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node index.js",
     "build": "npx tsc",
     "commit": "npx git-cz",
-    "test": "cross-env TOGGLE_LOGS=off INPUT_ROUTES_FILE_NAME=input-routes-test.csv jest --runInBand",
+    "test": "cross-env NODE_ENV=test TOGGLE_LOGS=off INPUT_ROUTES_FILE_NAME=input-routes-test.csv jest --runInBand",
     "best-route": "cross-env TOGGLE_LOGS=off node ./src/modules/airport/airport-cli.js"
   },
   "author": "Gio Cruz",
